--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import "reset";
-@import "variables/global";
-@import "themes/normal";
-@import "themes/dark";
+@import "./variables/global";
+@import "./themes/normal";
+@import "./themes/dark";
 .app {
   font-size: var(--font-m);
   background: var(--bg-color);
