--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,4 +3,9 @@
   --primary-color: #05e005;
   --secondary-color: green;
 
+  --inverted-bg-color: #0f1a38;
+  --inverted-primary-color: #0529e0;
+  --inverted-secondary-color: #041285;
+
+
 }
