--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,4 +3,9 @@
   --primary-color: #0529e0;
   --secondary-color: #041285;
 
+
+  --inverted-bg-color: #102a10;
+  --inverted-primary-color: #05e005;
+  --inverted-secondary-color: green;
+
 }
