--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -8,6 +8,5 @@
   --font-line-l: 48px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-  --bg-color: #5f6ed9;
-  --primary-color: #1c36ec
+  --navbar-height: 50px;
 }
