--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
   --bg-color: #102a10;
-  --primary-color: #05e005;
+  --primary-color: #30f104;
   --secondary-color: green;
 
   --inverted-bg-color: #0f1a38;
