--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,15 +1,12 @@
 :root {
-  --font-family-main: Consolas, "Times New Roma", Serif;
-  --font-size-m: 32px;
-  --font-line-m: 40px;
-  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
-
-  --font-size-l: 40px;
-  --font-line-l: 48px;
-  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-
-  --navbar-height: 50px;
-  --sidebar-width: 200px;
-  --sidebar-width-collapsed: 80px;
-
+    --font-family-main: consolas, "Times New Roma", serif;
+    --font-size-m: 32px;
+    --font-line-m: 40px;
+    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    --font-size-l: 40px;
+    --font-line-l: 48px;
+    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+    --navbar-height: 50px;
+    --sidebar-width: 200px;
+    --sidebar-width-collapsed: 80px;
 }
