--- a/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
@@ -1,6 +1,6 @@
 .notFoundPage {
     display: flex;
-    height: 100%;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     font: var(--font-l);
