28 sidebar, button, loki report

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,9 @@
 .app.dark {
-    --bg-color: #102a10;
-    --primary-color: #30f104;
-    --secondary-color: green;
-    --inverted-bg-color: #0f1a38;
-    --inverted-primary-color: #0529e0;
-    --inverted-secondary-color: #041285;
+    --bg-color: #4D0881;
+    --primary-color: #A3E25B;
+    --secondary-color: #578323;
+
+    --inverted-bg-color: #F4DFC0;
+    --inverted-primary-color: #F09102;
+    --inverted-secondary-color: #61A62F;
 }
