--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,8 +1,10 @@
 .app.light {
-    --bg-color: #0f1a38;
-    --primary-color: #0529e0;
-    --secondary-color: #041285;
-    --inverted-bg-color: #102a10;
-    --inverted-primary-color: #05e005;
-    --inverted-secondary-color: green;
+    --bg-color: #F4DFC0;
+    --primary-color: #F09102;
+    --secondary-color: #61A62F;
+
+
+    --inverted-bg-color: #4D0881;
+    --inverted-primary-color: #A3E25B;
+    --inverted-secondary-color: #578323;
 }
