--- a/src/widgets/AppLink/ui/AppLink.module.scss
+++ b/src/widgets/AppLink/ui/AppLink.module.scss
@@ -6,6 +6,10 @@
     color: var(--primary-color);
 }
 
+.secondary {
+    color: var(--secondary-color);
+}
+
 .inverted {
     color: var(--inverted-primary-color);
 }
