--- a/src/widgets/Sigebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sigebar/ui/Sidebar.module.scss
@@ -6,10 +6,6 @@
     position: relative;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
     position: absolute;
     bottom: 20px;
@@ -19,5 +15,46 @@
 }
 
 .lang {
-    margin: 20px;
+    margin-left: 20px;
+}
+
+.btnCollapsed {
+    position: absolute;
+    right: -32px;
+    bottom: 32px;
+}
+
+.items {
+    margin-left: 30px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.item {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.link {
+    margin-left: 10px;
+}
+
+.icon {
+    fill: var(--secondary-color);
+
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+    .link {
+        opacity: 0;
+        transition: opacity 0.2s;
+        width: 0;
+    }
 }
