--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-    --bg-color: #4D0881;
-    --primary-color: #A3E25B;
+    --bg-color: #4d0881;
+    --primary-color: #a3e25b;
     --secondary-color: #578323;
-
-    --inverted-bg-color: #F4DFC0;
-    --inverted-primary-color: #F09102;
-    --inverted-secondary-color: #61A62F;
+    --inverted-bg-color: #f4dfc0;
+    --inverted-primary-color: #f09102;
+    --inverted-secondary-color: #61a62f;
 }
