--- a/src/widgets/Button/ui/Button.module.scss
+++ b/src/widgets/Button/ui/Button.module.scss
@@ -3,11 +3,16 @@
     color: var(--primary-color);
 }
 
-.clear {
+.clear,
+.clearInverted {
     padding: 0;
     border: none;
     background: none;
     outline: none;
+}
+
+.clearInverted {
+    color: var(--inverted-primary-color);
 }
 
 .outline {
@@ -37,7 +42,6 @@
     width: var(--font-line-m);
     height: var(--font-line-m);
 }
-
 
 .square.size_l {
     width: var(--font-line-l);
