34 auth form, slice fix errors

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,8 @@
 .app_light_theme {
     --bg-color: #f4dfc0;
-    --primary-color: #f09102;
-    --secondary-color: #61a62f;
-    --inverted-bg-color: #4d0881;
-    --inverted-primary-color: #a3e25b;
-    --inverted-secondary-color: #578323;
+    --primary-color: #060;
+    --secondary-color: #090;
+    --inverted-bg-color: #444;
+    --inverted-primary-color: #0af;
+    --inverted-secondary-color: #0f7;
 }
