--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -13,5 +13,9 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
     --modal-z-index: 10;
+
+    // Colors
     --overlay-color: rgba(0 0 0 / 60%);
+    --red-light: #f00;
+    --red-dark: #ce0a0a;
 }
