41 avatar, select, countryselect, currencyselect and many many

--- a/src/shared/ui/Text/ui/Text.module.scss
+++ b/src/shared/ui/Text/ui/Text.module.scss
@@ -18,3 +18,16 @@
         color: var(--red-light);
     }
 }
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
+.center {
+    text-align: center;
+
+}
