--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -16,11 +16,18 @@
     color: var(--inverted-primary-color);
 }
 
-.outline {
+.outline,
+.outlineRed{
     padding: 10px 15px;
     border: 1px solid var(--primary-color);
-    color: var(--primary-color);
+
     background: none;
+}
+.outline {
+    color: var(--primary-color);
+}
+.outlineRed {
+    color: var(--red-light);
 }
 
 .background {
