--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,11 @@
 .app_dark_theme {
-    --bg-color: #4d0881;
-    --primary-color: #a3e25b;
-    --secondary-color: #578323;
-    --inverted-bg-color: #f4dfc0;
-    --inverted-primary-color: #f09102;
-    --inverted-secondary-color: #61a62f;
+
+    --primary-color: #21C49C;
+    --secondary-color: #58FEDB;
+    --bg-color: #1B2821;
+
+
+    --inverted-primary-color: #287063;
+    --inverted-secondary-color: #1B2821;
+    --inverted-bg-color: #09342b;
 }
