--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,10 @@
 .app_light_theme {
-    --bg-color: #f4dfc0;
-    --primary-color: #060;
-    --secondary-color: #090;
-    --inverted-bg-color: #444;
-    --inverted-primary-color: #0af;
-    --inverted-secondary-color: #0f7;
+
+    --primary-color: #214eff;
+    --secondary-color: #f4f5fb;
+    --bg-color: #eeeeee;
+
+    --inverted-primary-color: #eeeeee;
+    --inverted-secondary-color: #f4f5fb;
+    --inverted-bg-color: #0727a2;
 }
