--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -4,6 +4,7 @@
     transition: width ease-out 0.3s;
     background: var(--inverted-bg-color);
     position: relative;
+    color: var(--inverted-secondary-color);
 }
 
 .switchers {
