--- a/src/widgets/Sidebar/ui/SidebarItems/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItems/SidebarItem.module.scss
@@ -1,11 +1,12 @@
 .icon {
-    fill: var(--secondary-color);
+    fill: var(--inverted-primary-color);
 }
 
 .item {
     margin-top: 10px;
     display: flex;
     align-items: center;
+    color: var(--inverted-primary-color);
 }
 
 .link {
