49 ентити, слайсы, скелетон, верстаем article details

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -7,4 +7,7 @@
     --inverted-primary-color: #eeeeee;
     --inverted-secondary-color: #f4f5fb;
     --inverted-bg-color: #0727a2;
+
+    --skeleton-color: #1515ad;
+    --skeleton-shadow: #2b2be8;
 }
