--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -8,4 +8,8 @@
   --inverted-primary-color: #dbd5dc;
   --inverted-secondary-color: #faf4fb;
   --inverted-bg-color: #bd5012;
+
+  --skeleton-color: #ad4f15;
+  --skeleton-shadow: #ad4f38;
+
 }
