--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,4 +8,8 @@
     --inverted-primary-color: #287063;
     --inverted-secondary-color: #1B2821;
     --inverted-bg-color: #09342b;
+
+    --skeleton-color: #32d59C;
+    --skeleton-shadow: #32d5ad;
+
 }
