59 Фильтры. Сортировка. Поиск. Tabs. useDebounce, фикс ошибок, пилим сортировки

--- a/src/entities/Article/ui/ArticleList/ui/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ui/ArticleList.module.scss
@@ -1,16 +1,7 @@
-.ArticleList {
-
-
-}
-
-
 .tile {
   display: flex;
   flex-wrap: wrap;
-  .card {
-    margin-bottom: 30px;
-    margin-right: 30px;
-  }
+  gap: 30px;
 }
 
 .list {
