60 пилю details, схемы, редюсеры, слайсы, сервис

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,6 +7,8 @@
 body {
     font-size: var(--font-m);
     color: var(--primary-color);
+    scrollbar-width: 12px;
+    scrollbar-color: var(--inverted-bg-color) var(--bg-card) ;
 }
 
 .app {
@@ -18,3 +20,17 @@ body {
     display: flex;
 }
 
+*::-webkit-scrollbar {
+    width: 12px;               /* ширина scrollbar */
+    height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--bg-card);        /* цвет дорожки */
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--inverted-primary-color);    /* цвет плашки */
+    border-radius: 20px;       /* закругления плашки */
+    border: 2px solid var(--primary-color);  /* padding вокруг плашки */
+}
