--- a/src/widgets/Page/ui/Page.module.scss
+++ b/src/widgets/Page/ui/Page.module.scss
@@ -2,7 +2,7 @@
   flex-grow: 1;
   padding: 20px 20px 20px 45px;
   height: calc(100vh - var(--navbar-height));
-  overflow: auto;
+  overflow-y: auto;
   flex-shrink: 100;
 
 }
