61 кнопки перехода на редактирование, на создание, заголовок на сайт

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -19,3 +19,13 @@
 .link {
     margin-right: 15px;
 }
+
+.appName {
+    width: var(--sidebar-width);
+    margin-left: 15px;
+}
+
+.createBtn {
+    margin-right: 15px;
+
+}
