--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,4 +1,7 @@
 .sidebar {
+    padding-top: 10px;
+    padding-left: 16px;
+
     height: calc(100vh - var(--navbar-height));
     min-width: var(--sidebar-width);
     transition: width ease-out 0.3s;
@@ -26,10 +29,7 @@
 }
 
 .items {
-    margin-left: 30px;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
+
 }
 
 .collapsed {
