--- a/src/shared/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ui/ListBox.module.scss
@@ -17,6 +17,7 @@
   z-index: 10000;
   border-radius: 12px;
   box-shadow: 4px 4px 8px var(--bg-listbox);
+  width: 100%;
 }
 
 .item {
@@ -26,4 +27,8 @@
 
 .active {
   background: var(--inverted-primary-color);
+}
+
+.disabled {
+  opacity: 0.7;
 }
