67 внедрил в currency and country, добавил disabled, проверил - добавляю направление выпадения

--- a/src/shared/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ui/ListBox.module.scss
@@ -17,7 +17,7 @@
   z-index: 10000;
   border-radius: 12px;
   box-shadow: 4px 4px 8px var(--bg-listbox);
-  width: 100%;
+  min-width: 100%;
 }
 
 .item {
