67 закончил сборку странциы

--- a/src/shared/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ui/ListBox.module.scss
@@ -18,7 +18,14 @@
   border-radius: 12px;
   box-shadow: 4px 4px 8px var(--bg-listbox);
   min-width: 100%;
+
+
 }
+
+.optionsTop {
+  bottom: 100%;
+}
+
 
 .item {
   padding: 10px 20px;
