--- a/src/shared/ui/ListBox/ui/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ui/ListBox.module.scss
@@ -22,8 +22,26 @@
 
 }
 
-.optionsTop {
+.optionsTopRight {
   bottom: 100%;
+  left: 0;
+
+}
+
+.optionsTopLeft {
+  bottom: 100%;
+  right: 0;
+}
+
+.optionsBottomRight {
+  top: 100%;
+  left: 0;
+
+}
+
+.optionsBottomLeft {
+  top: 100%;
+  right: 0;
 }
 
 
