--- a/src/shared/ui/DropDown/ui/DropDown.module.scss
+++ b/src/shared/ui/DropDown/ui/DropDown.module.scss
@@ -8,6 +8,7 @@
   outline: none;
   padding: 0;
   margin: 0;
+  cursor: pointer;
 }
 
 .menu {
@@ -16,6 +17,8 @@
   z-index: 10000;
   border-radius: 8px;
   border: 1px solid var(--primary-color);
+  flex-direction: column;
+  display: flex;
 }
 
 .item {
@@ -30,4 +33,26 @@
 
 .active {
   background: var(--inverted-primary-color);
+}
+
+.optionsTopRight {
+  bottom: 100%;
+  left: 0;
+
+}
+
+.optionsTopLeft {
+  bottom: 100%;
+  right: 0;
+}
+
+.optionsBottomRight {
+  top: 100%;
+  left: 0;
+
+}
+
+.optionsBottomLeft {
+  top: 100%;
+  right: 0;
 }
