73 роли пользователя админ страница, роли админа, менеджера, забрасываем все в навбар, пофиксил ошибку у сайдбара

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
     padding-left: 16px;
 
     height: calc(100vh - var(--navbar-height));
-    min-width: var(--sidebar-width);
+    width: var(--sidebar-width);
     transition: width ease-out 0.3s;
     background: var(--inverted-bg-color);
     position: relative;
@@ -26,6 +26,7 @@
     position: absolute;
     right: -32px;
     bottom: 32px;
+    z-index: 10000;
 }
 
 .items {
