--- a/src/shared/ui/Popups/styles/styles.module.scss
+++ b/src/shared/ui/Popups/styles/styles.module.scss
@@ -1,3 +1,6 @@
+.popup {
+  display: flex;
+}
 
 .optionsTopRight {
   bottom: 100%;
@@ -24,5 +27,20 @@
 
 .item {
   padding: 10px 20px;
+}
 
+.active {
+  background: var(--inverted-primary-color);
+}
+
+.disabled {
+  opacity: 0.7;
+}
+.trigger {
+    background: none;
+    border: none;
+    outline: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
 }
