--- a/src/shared/ui/Popups/ui/Popover/ui/Popover.module.scss
+++ b/src/shared/ui/Popups/ui/Popover/ui/Popover.module.scss
@@ -1,5 +1,5 @@
 .Popover {
-  display: flex;
+
 }
 
 .panel {
@@ -7,5 +7,5 @@
   position: absolute;
   z-index: 10000;
   border-radius: 8px;
-
+  padding: 15px;
 }
