--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -21,7 +21,10 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
-    --modal-z-index: 10;
+    --modal-z-index: 30000;
+    --modal-opened-z-index: 20000;
+    --overlay-z-index: 5000;
+    --sidebar-btn-z-index: 4000;
 
     // Colors
     --overlay-color: rgba(0 0 0 / 60%);
