--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -26,7 +26,7 @@
     position: absolute;
     right: -32px;
     bottom: 32px;
-    z-index: 10000;
+    z-index: var(--sidebar-btn-z-index);
 }
 
 .items {
