80 допилил вывод под мобилку, поправил ошибки

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -22,6 +22,7 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
     --modal-z-index: 30000;
+    --modal-content-z-index: 6000;
     --modal-opened-z-index: 20000;
     --overlay-z-index: 5000;
     --sidebar-btn-z-index: 4000;
