--- a/src/widgets/Modal/ui/Modal.module.scss
+++ b/src/widgets/Modal/ui/Modal.module.scss
@@ -39,6 +39,7 @@
     transition: 0.3s transform;
     transform: scale(0.5);
     max-width: 60%;
+    z-index: var(--modal-content-z-index);
 }
 
 .opened {
