--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -14,8 +14,13 @@ body {
 .app,
 .app_modal,
 .app_drawer {
-    min-height: 100vh;
+    font: var(--font-m);
+    color: var(--primary-color)
+}
+
+.app {
     background: var(--bg-color);
+    min-height: 100vh;
 }
 
 .content-page {
