--- a/src/entities/Article/ui/ArticleViewSelector/ui/ArticleViewSelector.module.scss
+++ b/src/entities/Article/ui/ArticleViewSelector/ui/ArticleViewSelector.module.scss
@@ -1,7 +1,7 @@
 .ArticleViewSelector {
-  display: block;
+    display: block;
 }
-.notSelected{
-  fill: var(--secondary-color)
 
+.notSelected {
+    fill: var(--secondary-color);
 }
