--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,8 +7,7 @@
     padding: 20px;
 }
 
-.links
-.actions{
+.links .actions {
     margin-left: auto;
 }
 
@@ -28,5 +27,3 @@
 .createBtn {
     margin-right: 15px;
 }
-
-
